--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jsonp": "^0.2.0",
     "@types/less": "^0.0.33",
     "@types/react-router-dom": "^4.3.0",
     "antd": "^3.7.3",
@@ -23,20 +24,29 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "22.4.2",
+    "jsonp": "^0.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "precss": "^3.1.2",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-app-rewired": "^1.5.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "^2.16.0",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "sw-precache-webpack-plugin": "0.11.4",
+    "ts-import-plugin": "^1.5.4",
     "ts-jest": "22.0.1",
     "ts-loader": "^2.3.7",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
@@ -48,14 +58,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "ts-import-plugin": "^1.5.4",
-    "react-app-rewired": "^1.5.2",
-    "react-scripts-ts": "^2.16.0"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
